grafana/non-prod/terraform/alb.tf
# alb.tf

resource "aws_alb" "main" {
  name            = "${var.prefix}-load-balancer"
  subnets         = aws_subnet.grafana_public.*.id
  security_groups = [aws_security_group.lb.id]
  tags = merge(var.tags, {
    Name = "${var.prefix}-load-balancer"
  })
}

resource "aws_alb_target_group" "app" {
  name        = "${var.prefix}-target-group"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.grafana_main.id
  target_type = "ip"

  health_check {
    healthy_threshold   = 3
    interval            = 30
    protocol            = "HTTP"
    matcher             = "200"
    timeout             = 3
    path                = var.health_check_path
    unhealthy_threshold = 2
  }

  tags = merge(var.tags, {
    Name = "${var.prefix}-target-group"
  })
}

# Redirect all traffic from the ALB to the target group
resource "aws_alb_listener" "front_end" {
  load_balancer_arn = aws_alb.main.id
  port              = var.app_port
  protocol          = "HTTP"

  default_action {
    target_group_arn = aws_alb_target_group.app.id
    type             = "forward"
  }

  tags = merge(var.tags, {
    Name = "${var.prefix}-listener"
  })
}
